--- a/detail.html
+++ b/detail.html
@@ -15,14 +15,59 @@
           height="100px"
           width="150px"
         />
+        <a href="./login.html"><span>Login</span></a>
       </div>
-      <div>Header Div</div>
     </header>
     <section>
-      <div>Content Div</div>
+      <div>
+        <img
+          src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
+          alt="Radisson hotel"
+        />
+        
+      </div>
+      <a href="./payment.html"><p>Book Now</p></a>
+      <div>
+        <h2>Radisson Blue Hotel</h2>
+        <p>Rating</p>
+        <p>5 star</p>
+        <div>
+            <p>Amenities</p>
+          <ul>
+            <li>Room Service</li>
+            <li>Restaurant</li>
+            <li>Business Center</li>
+            <li>Fitness Center</li>
+            <li>Pool</li>
+          </ul>
+        </div>
+        <h5>Description</h5>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero autem
+          voluptate hic natus aut ut nisi molestiae excepturi officiis.
+          Voluptates, quidem blanditiis dolor autem officia fuga animi neque
+          laboriosam. Dolorum!
+        </p>
+      </div>
     </section>
     <footer>
-      <div>Footer Div</div>
-    </footer>
+        <div>
+          <a href="./contact.html" target="_blank">Contact Us</a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com" target="_blank"
+            ><img src="./assests/images/facebook.png" height="20px" width="22px"
+          /></a>
+          <a href="https://www.instagram.com" target="_blank"
+            ><img src="./assests/images/instagram.png" height="20px" width="22px"
+          /></a>
+          <a href="https://www.twitter.com" target="_blank"
+            ><img src="./assests/images/twitter.png" height="20px" width="22px"
+          /></a>
+        </div>
+        <div>
+          <p>&#169 2020 ROOM SEARCH PVT LTD</p>
+        </div>
+      </footer>
   </body>
 </html>
