--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <main>
     <header>
       <div>
         <img
@@ -16,14 +17,56 @@
           height="100px"
           width="150px"
         />
+        <a href="./login.html"><span>Login</span></a>
       </div>
-      <div>Header Div</div>
     </header>
     <section>
-      <div>Content Div</div>
+      <div>Search Bar</div>
+      <div>
+        <a href="./list.html" target="_blank"><img
+          src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg"
+          height="300px"
+          width="300px"
+        /></a>
+        <img
+          src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg"
+          height="300px"
+          width="300px"
+        />
+        <img
+          src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg"
+          height="300px"
+          width="300px"
+        />
+        <img
+          src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg"
+          height="300px"
+          width="300px"
+        />
+      </div>
+      <div>
+        <a href="./index.html">View More</a>
+      </div>
     </section>
     <footer>
-      <div>Footer Div</div>
+      <div>
+        <a href="./contact.html" target="_blank">Contact Us</a>
+      </div>
+      <div>
+        <a href="https://www.facebook.com" target="_blank"
+          ><img src="./assests/images/facebook.png" height="20px" width="22px"
+        /></a>
+        <a href="https://www.instagram.com" target="_blank"
+          ><img src="./assests/images/instagram.png" height="20px" width="22px"
+        /></a>
+        <a href="https://www.twitter.com" target="_blank"
+          ><img src="./assests/images/twitter.png" height="20px" width="22px"
+        /></a>
+      </div>
+      <div>
+        <p>&#169 2020 ROOM SEARCH PVT LTD</p>
+      </div>
     </footer>
+</main>
   </body>
 </html>
