--- a/list.html
+++ b/list.html
@@ -16,14 +16,73 @@
           height="100px"
           width="150px"
         />
+        <a href="./login.html" target="_blank"><span>Login</span></a>
       </div>
       <div>Header Div</div>
     </header>
     <section>
-      <div>Content Div</div>
+      <div>
+        <ul>
+          <a href="./list.html"><li>List View</li></a>
+          <a href="./list.html"><li>Map View</li></a>
+        </ul>
+      </div>
+      <a href="./detail.html" target="_blank">
+        <div>
+        <img
+          src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
+          alt="Radisson hotel"
+        />
+        <a href="./detail.html" target="_blank"><h3>Radisson Blu Hotel</h3></a>
+        <a href="./detail.html" target="_blank"><p>5 star</p></a>
+        <a href="./detail.html" target="_blank"><p>New Delhi</p></a>
+      </div>
+    </a>
+      
+      <div>
+        <img
+          src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg"
+          alt="Lalit hotel"
+        />
+        <a href=""><h3>The Lalit New Delhi</h3></a>
+        <a href=""><p>4.5 star</p></a>
+        <a href=""><p>New Delhi</p></a>
+      </div>
+      <div>
+        <img
+          src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg"
+          alt="Taj hotel"
+        />
+        <a href=""><h3>Taj Palace</h3></a>
+        <a href=""><p>4.0 star</p></a>
+        <a href=""><p>New Delhi</p></a>
+      </div>
+      <div>
+        <img
+          src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png"
+          alt="map view"
+        />
+        <p>MAP VIEW</p>
+      </div>
     </section>
     <footer>
-      <div>Footer Div</div>
+      <div>
+        <a href="./contact.html" target="_blank">Contact Us</a>
+      </div>
+      <div>
+        <a href="https://www.facebook.com" target="_blank"
+          ><img src="./assests/images/facebook.png" height="20px" width="22px"
+        /></a>
+        <a href="https://www.instagram.com" target="_blank"
+          ><img src="./assests/images/instagram.png" height="20px" width="22px"
+        /></a>
+        <a href="https://www.twitter.com" target="_blank"
+          ><img src="./assests/images/twitter.png" height="20px" width="22px"
+        /></a>
+      </div>
+      <div>
+        <p>&#169 2020 ROOM SEARCH PVT LTD</p>
+      </div>
     </footer>
   </body>
 </html>
