--- a/payment.html
+++ b/payment.html
@@ -15,14 +15,51 @@
           height="100px"
           width="150px"
         />
+        <a href="./login.html"><span>Login</span></a>
       </div>
-      <div>Header Div</div>
     </header>
     <section>
-      <div>Content Div</div>
+      <div>
+        <img
+          src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
+          alt="Radisson hotel"
+        />
+      </div>
+      <div>
+        <h2>The Radisson Blu Hotel</h2>
+        <p>#38 of 1,289 in New Delhi</p>
+        <p>National Highway 8,New Delhi 110017 India</p>
+      </div>
+      <div>
+        <p><strong>Name:</strong>John Doe</p>
+        <p><strong>Number of Adults:</strong>2</p>
+        <p><strong>Check-in Date:</strong>06/06/2020</p>
+        <p><strong>Check-out Date:</strong>08/06/2020</p>
+      </div>
+      <div>
+        <p><strong>Tariff Breakdown:</strong>Rs.1000 x 2Adults x 5 Nights</p>
+        <p><strong>Total Amount:</strong>Rs, 10000</p>
+        <p><a href="./payment.html">Pay Now</a></p>
+      </div>
     </section>
     <footer>
-      <div>Footer Div</div>
+      <div>
+        <a href="./contact.html" target="_blank">Contact Us</a>
+      </div>
+      <div>
+        <a href="https://www.facebook.com" target="_blank"
+          ><img src="./assests/images/facebook.png" height="20px" width="22px"
+        /></a>
+        <a href="https://www.instagram.com" target="_blank"
+          ><img src="./assests/images/instagram.png" height="20px" width="22px"
+        /></a>
+        <a href="https://www.twitter.com" target="_blank"
+          ><img src="./assests/images/twitter.png" height="20px" width="22px"
+        /></a>
+      </div>
+      <div>
+        <p>&#169 2020 ROOM SEARCH PVT LTD</p>
+      </div>
     </footer>
   </body>
 </html>
