--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       </div>
     </header>
     <section>
-      <div>Search Bar</div>
+      <div>
+        <input type="text" placeholder="City"/>
+      </div>
       <div>
         <a href="./list.html" target="_blank"><img
           src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg"
