--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <div>
-      <p>CONTACT US</p>
+      <div>
+        <p>Thank you for reaching out!!!</p>
+        <p>Please enter your email and we will get back to you.</p>
+      </div>
+      <form action="./index.html">
+        <input type="email" placeholder="Enter your email" required /><br />
+        <button type="submit">Submit</button>
+      </form>
     </div>
   </body>
 </html>
