--- a/list.html
+++ b/list.html
@@ -10,12 +10,12 @@
   <body>
     <header>
       <div>
-        <img
+        <a href="./index.html" target="_blank"><img
           src="./assests/images/logo.png"
           alt="logo"
           height="100px"
           width="150px"
-        />
+        /></a>
         <a href="./login.html" target="_blank"><span>Login</span></a>
       </div>
       <div>Header Div</div>
