--- a/login.html
+++ b/login.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <div>
-      <p>LOGIN</p>
+      <form action="./index.html">
+        <label>Username</label>
+        <input type="text" placeholder="Enter Usename" required /><br />
+        <label>Password</label>
+        <input type="password" placeholder="Enter Password" required /><br />
+        <button type="submit">Login</button>
+      </form>
     </div>
   </body>
 </html>
