--- a/detail.html
+++ b/detail.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detail</title>
+    <link rel="stylesheet" href="./styles/detail.css">
   </head>
   <body>
+    <main>
     <header>
       <div>
         <a href="./index.html"><img
           src="./assests/images/logo.png"
           alt="logo"
-          height="100px"
-          width="150px"
+          height="60px"
+          width="60px"
         /></a>
         <a href="./login.html"><span>Login</span></a>
       </div>
@@ -22,7 +24,8 @@
       <div>
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
-          alt="Radisson hotel"
+          alt="Radisson hotel" height="500px"
+          width="500px"
         />
         
       </div>
@@ -84,5 +87,6 @@
           <p>&#169 2020 ROOM SEARCH PVT LTD</p>
         </div>
       </footer>
+    </main>
   </body>
 </html>
