--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-  </head>
+    <link rel="stylesheet" href="./styles/index.css">
+    </head>
 
   <body>
     <main>
@@ -14,8 +15,9 @@
         <img
           src="./assests/images/logo.png"
           alt="logo"
-          height="100px"
-          width="150px"
+          height="60px"
+          width="60px"
+          class="hotel-logo"
         />
         <a href="./login.html"><span>Login</span></a>
       </div>
@@ -25,25 +27,25 @@
         <input type="text" placeholder="City"/>
       </div>
       <div>
-        <a href="./list.html" target="_blank"><img
+        <a href="./list.html"><img
           src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg"
-          height="300px"
-          width="300px"
+          height="150px"
+          width="150px"
         /></a>
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg"
-          height="300px"
-          width="300px"
+          height="150px"
+          width="150px"
         />
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg"
-          height="300px"
-          width="300px"
+          height="150px"
+          width="150px"
         />
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg"
-          height="300px"
-          width="300px"
+          height="150px"
+          width="150px"
         />
       </div>
       <div>
