--- a/list.html
+++ b/list.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>List</title>
+    <link rel="stylesheet" href="./styles/list.css">
   </head>
 
   <body>
+    <main>
     <header>
       <div>
-        <a href="./index.html" target="_blank"><img
+        <a href="./index.html"><img
           src="./assests/images/logo.png"
           alt="logo"
-          height="100px"
-          width="150px"
+          height="60px"
+          width="60px"
         /></a>
         <a href="./login.html" target="_blank"><span>Login</span></a>
       </div>
@@ -23,15 +25,15 @@
     <section>
       <div>
         <ul>
-          <a href="./list.html"><li>List View</li></a>
-          <a href="./list.html"><li>Map View</li></a>
+          <li><a href="#list-view">List View</a></li>
+          <li><a href="#map-view">Map View</a></li>
         </ul>
       </div>
-      <a href="./detail.html" target="_blank">
+      <a href="./detail.html">
         <div>
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
-          alt="Radisson hotel"
+          alt="Radisson hotel" id="list-view" width="150px" height="150px"
         />
         <a href="./detail.html" target="_blank"><h3>Radisson Blu Hotel</h3></a>
         <a href="./detail.html" target="_blank"><p>5 star</p></a>
@@ -42,7 +44,7 @@
       <div>
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg"
-          alt="Lalit hotel"
+          alt="Lalit hotel" id="list-view" width="150px" height="150px"
         />
         <a href=""><h3>The Lalit New Delhi</h3></a>
         <a href=""><p>4.5 star</p></a>
@@ -51,7 +53,7 @@
       <div>
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg"
-          alt="Taj hotel"
+          alt="Taj hotel" id="list-view" width="150px" height="150px"
         />
         <a href=""><h3>Taj Palace</h3></a>
         <a href=""><p>4.0 star</p></a>
@@ -60,8 +62,9 @@
       <div>
         <img
           src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png"
-          alt="map view"
+          alt="map view" id="map-view"
         />
+        
         <p>MAP VIEW</p>
       </div>
     </section>
@@ -84,5 +87,6 @@
         <p>&#169 2020 ROOM SEARCH PVT LTD</p>
       </div>
     </footer>
+    </main>
   </body>
 </html>
