--- a/index.html
+++ b/index.html
@@ -23,29 +23,33 @@
       </div>
     </header>
     <section>
-      <div>
+      <div class="search-content">
         <input type="text" placeholder="City"/>
       </div>
-      <div>
+      <div class="city-cards">
         <a href="./list.html"><img
           src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg"
           height="150px"
           width="150px"
+          class="city-img"
         /></a>
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg"
           height="150px"
           width="150px"
+          class="city-img"
         />
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg"
           height="150px"
           width="150px"
+          class="city-img"
         />
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg"
           height="150px"
           width="150px"
+          class="city-img"
         />
       </div>
       <div>
