--- a/detail.html
+++ b/detail.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <section>
-      <div>
+      <div class="hotel-img">
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
           alt="Radisson hotel" height="500px"
@@ -29,7 +29,7 @@
         />
         
       </div>
-      <div>
+      <div class="booking-form">
         <form action="./payment.html">
           <label>Adults:</label>
           <input type="number" value=1 min="1" max="100" /><br>
@@ -44,8 +44,7 @@
           <button type="submit">Book Now</button>
         </form>
       </div>
-      <a href="./payment.html"><p>Book Now</p></a>
-      <div>
+      <div class="hotel-des">
         <h2>Radisson Blue Hotel</h2>
         <p>Rating</p>
         <p>5 star</p>
