--- a/list.html
+++ b/list.html
@@ -20,7 +20,6 @@
         /></a>
         <a href="./login.html" target="_blank"><span>Login</span></a>
       </div>
-      <div>Header Div</div>
     </header>
     <section>
       <div>
@@ -30,7 +29,7 @@
         </ul>
       </div>
       <a href="./detail.html">
-        <div>
+        <div class="hotel-img">
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
           alt="Radisson hotel" id="list-view" width="150px" height="150px"
@@ -41,7 +40,7 @@
       </div>
     </a>
       
-      <div>
+      <div class="hotel-img">
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg"
           alt="Lalit hotel" id="list-view" width="150px" height="150px"
@@ -50,7 +49,7 @@
         <a href=""><p>4.5 star</p></a>
         <a href=""><p>New Delhi</p></a>
       </div>
-      <div>
+      <div class="hotel-img">
         <img
           src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg"
           alt="Taj hotel" id="list-view" width="150px" height="150px"
